syntax = "proto3";

package shortener;

option go_package = "github.com/johnbperkins/url-shortener/gen;gen";

message ShortenRequest {
	string url = 1;
}
message ShortenResponse {
	string code = 1;
}

message ResolveRequest {
	string code = 1;
}
message ResolveResponse {
	string url = 1;
}

service Shortener {
	rpc Shorten (ShortenRequest) returns (ShortenResponse);
	rpc Resolve (ResolveRequest) returns (ResolveResponse);
}